python_color_apps/k8s_ingress_resources/blue-ingress-resource.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
   name: python-blue-ingress
spec: 
   rules: 
      - host: blue.example.com
        http:
           paths: 
              - backend: 
                   serviceName: python-blue
                   servicePort: 80
