python_color_apps/k8s_ingress_resources/green-ingress-resource.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
   name: python-green-ingress
spec: 
   rules: 
      - host: green.example.com
        http:
           paths: 
              - backend: 
                   serviceName: python-green
                   servicePort: 80
