python_color_apps/k8s_ingress_resources/red-ingress-resource.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
   name: python-red-ingress
spec: 
   rules: 
      - host: red.example.com
        http:
           paths: 
              - backend: 
                   serviceName: python-red
                   servicePort: 80
